<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".FullscreenActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/layout_generator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/generate_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/string_generate_graph" />

            <TextView
                android:id="@+id/generate_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:layout_toRightOf="@+id/generate_button"
                android:text="@string/string_generate_graph_text" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_dijkstras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_generator"
            android:orientation="vertical" >

            <Button
                android:id="@+id/dijkstras_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/string_run_algorithm" />
        </RelativeLayout>

        <TextView
            android:id="@+id/generated_graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_dijkstras"
            android:layout_margin="10dp" />


        <TextView
            android:id="@+id/algorithm_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_dijkstras"
            android:layout_margin="10dp"
            android:layout_toRightOf="@+id/generated_graph" />
    </RelativeLayout>

</FrameLayout>